--- a/templates/main_dashboard.html
+++ b/templates/main_dashboard.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="{{ url_for('shopping_list') }}">🛒 רשימת קניות</a></li>
-                <li><a href="#">🗓️ יומן</a></li>
+                <li><a href="{{ url_for('events') }}">🗓️ יומן</a></li>
                 <li><a href="#">📝 פתקים</a></li>
                 <li><a href="#">📌 משימות לטווח ארוך</a></li>
             </ul>
